<resources>
    <string name="app_name">Smart Shopper</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="picture_of_the_on_sale_item">Picture of the on sale item</string>
    <string name="dealpostedtime">dealPostedTime</string>
    <string name="dealpostedby">dealPostedBy</string>
    <string name="deal_title">Deal Title</string>
    <string name="store_item_found_at">Store item found at</string>
    <string name="original_price">Original Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="_0">0</string>
    <string name="thumbs_up_icon">Thumbs up icon</string>
    <string name="thumbs_down_icon">Thumbs down icon</string>
    <string name="my_account_button">My Account</string>
    <string name="settings_button">Settings</string>
    <string name="signin_button">Sign In</string>
    <string name="smart_shopper_label">Smart Shopper</string>
    <string name="app_icon">app icon</string>
    <string name="email_hint">*Email</string>
    <string name="title_hint">*Title</string>
    <string name="upc_hint">UPC</string>
    <string name="description_hint">Description</string>
    <string name="create_deal_hint">Create Deal</string>
    <string name="password_hint">*Password</string>
    <string name="store_hint">*Store</string>
    <string name="original_price_hint">*Original Price</string>
    <string name="sale_price_hint">*Sale Price</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="username_hint">*Username</string>
    <string name="or_textview">OR</string>
    <string name="send_password_reset_email_button_text">Send Password Reset Email</string>
    <string name="helper_text">To reset your password, please provide the username or email attached to your account. If an email or username for the account exists, the reset password link will be sent to that email.</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_hint">Create Account</string>
    <string name="agree_to_terms_checkbox">Agree To Terms</string>
    <string name="saved_deals_button">Saved Deals</string>
    <string name="save_deal_button">Save</string>
    <string name="remove_deal_button">Remove</string>
    <string name="reply_to_post">Reply to post...</string>
    <string name="bookmark_deals_to_see_them_here">Bookmark deals to see them here!</string>
    <string name="sort_by_distance">Sort By Distance</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="home">Home</string>
    <string name="ranking">Your Ranking</string>
    <string name="no_user_activities">Post or comment to see your activity!</string>
</resources>