<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/appHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/smart_shopper_label"
        style="@style/centeredText"
        app:layout_constraintBottom_toTopOf="@id/appIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_bag"
        tools:layout_editor_absoluteX="150dp"
        app:layout_constraintBottom_toTopOf="@id/email_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appHeader"
        android:contentDescription="@string/app_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/password_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIcon">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email_hint"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_layout">
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/password_hint"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login_button_text"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="357dp"
        app:layout_constraintBottom_toTopOf="@id/forgotPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
        />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/forgot_password_button"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="301dp"
        app:layout_constraintBottom_toTopOf="@id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:onClick="sendToForgotPasswordActivity"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="357dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordButton"
        android:onClick="sendToCreateAccountActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>
