<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/orTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextForgotUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:inputType="textAutoComplete"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="132dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/username_hint"
            android:autofillHints="AUTOFILL_HINT_USERNAME"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/orTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/centeredText"
        android:text="@string/or_textview"
        app:layout_constraintBottom_toTopOf="@id/forgot_password_email_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_username_text_input_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/passwordResetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orTextView">
        <EditText
            android:id="@+id/editTextForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="170dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/password_hint"
            android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/passwordResetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/send_password_reset_email_button_text"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="357dp"
        app:layout_constraintBottom_toTopOf="@id/helperText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_email_text_input_layout"
        />

    <TextView
        android:id="@+id/helperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/helperText"
        android:text="@string/helper_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordResetButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>