<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CreateAccountActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccountActivity">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/create_email_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextCreateUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="132dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/username_hint"
                android:autofillHints="AUTOFILL_HINT_USERNAME"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/create_password_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_username_text_input_layout">
            <EditText
                android:id="@+id/editTextCreateEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="170dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/email_hint"
                android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/create_confirm_password_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_email_text_input_layout">

            <EditText
                android:id="@+id/editTextCreatePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/password_hint"
                android:autofillHints="AUTOFILL_HINT_PASSWORD"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_confirm_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/createAccountButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_password_text_input_layout">
            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/confirm_password_hint"
                android:autofillHints="AUTOFILL_HINT_PASSWORD"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/create_account_hint"
            app:layout_constraintBottom_toTopOf="@id/agreeToTermsCheckboxWrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_confirm_password_text_input_layout"
            />
        <LinearLayout
            android:id="@+id/agreeToTermsCheckboxWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountButton">
        <CheckBox
            android:id="@+id/agreeToTermsCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_to_terms_checkbox" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>